--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "react01",
+  "name": "clickandremember",
+  "homepage": "https://juanidiaz.github.io/clickandremember",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "gh-pages": "^2.0.1",
+    "mdbreact": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
